# poker-hands

./: .gitignore  .npmignore  AGENTS.md  README.md  example-content.md  example-plan.md  index.ts  jest.config.js  odds-calculation-alternatives-plan.md  package-json-updates.md  package-lock.json  package.json  plan.md  straight_straight_flush_specifications.md  test-monte-carlo.js  tsconfig.json
src/rust/: Cargo.toml  architecture_diagram.md  architecture_review.md  data_structures.md  module_structure.md  package-lock.json  package.json  performance_optimization.md  wasm_integration.md
src/rust/profiling/: README.md  nodejs-inspector-guide.md  run-profile.ts  setup-guide.md  wasm-profiling-plan.md
src/rust/src/: card.rs  hand.rs  lib.rs
src/rust/src/hand/: get_best_hand.rs  get_flush.rs  get_four_of_a_kind.rs  get_full_house.rs  get_kickers.rs  get_pair.rs  get_royal_flush.rs  get_straight.rs  get_straight_flush.rs  get_three_of_a_kind.rs  get_two_pair.rs  hand.rs  hand_types.rs  has_flush.rs  has_four_of_a_kind.rs  has_full_house.rs  has_pair.rs  has_royal_flush.rs  has_straight.rs  has_straight_flush.rs  has_three_of_a_kind.rs  has_two_pair.rs
src/rust/src/tests/: card_to_string.rs  edge_cases.rs  get_best_hand.rs  get_flush.rs  get_four_of_a_kind.rs  get_full_house.rs  get_pair.rs  get_royal_flush.rs  get_straight.rs  get_straight_flush.rs  get_three_of_a_kind.rs  get_two_pair.rs  has_flush.rs  has_four_of_a_kind.rs  has_full_house.rs  has_pair.rs  has_royal_flush.rs  has_straight.rs  has_straight_flush.rs  has_three_of_a_kind.rs  has_two_pair.rs
(+147 files in other folders)
